--- a/LiquidClient-php/composer.json
+++ b/LiquidClient-php/composer.json
@@ -1,19 +1,19 @@
 {
-    "name": "swagger/swagger-client",
+    "name": "liquid/liquid-client",
     "version": "1.0.0",
     "description": "",
     "keywords": [
-        "swagger",
+        "liquid",
         "php",
         "sdk",
         "api"
     ],
-    "homepage": "http://swagger.io",
+    "homepage": "https://api.liqu.id/docs",
     "license": "Apache v2",
     "authors": [
         {
-            "name": "Swagger and contributors",
-            "homepage": "https://github.com/swagger-api/swagger-codegen"
+            "name": "Liquid and contributors",
+            "homepage": "https://github.com/liquidregistrar/liquid-php"
         }
     ],
     "require": {
@@ -28,6 +28,6 @@
         "squizlabs/php_codesniffer": "~2.0"
     },
     "autoload": {
-        "psr-4": { "Swagger\\Client\\" : "lib/" }
+        "psr-4": { "Liquid\\Client\\" : "lib/" }
     }
 }
